--- a/API_Testing/test-output/old/Default suite/methods.html
+++ b/API_Testing/test-output/old/Default suite/methods.html
@@ -1,6 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f385a2">  <td>23/03/14 15:33:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Logges.testHeaders()[pri:1, instance:day3.Logges@393671df]">testHeaders</td> 
+<tr bgcolor="d8c9b7">  <td>23/03/16 14:30:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UITest.endtest()[pri:0, instance:uiautomation.UITest@67c27493]">&lt;&lt;endtest</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="d8c9b7">  <td>23/03/16 14:30:49</td>   <td>-2711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UITest.setup()[pri:0, instance:uiautomation.UITest@67c27493]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="d8c9b7">  <td>23/03/16 14:30:49</td>   <td>-2711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UITest.setup()[pri:0, instance:uiautomation.UITest@67c27493]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="d8c9b7">  <td>23/03/16 14:30:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UITest.endtest()[pri:0, instance:uiautomation.UITest@67c27493]">&lt;&lt;endtest</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="d8c9b7">  <td>23/03/16 14:30:50</td>   <td>-1659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UITest.test2()[pri:2, instance:uiautomation.UITest@67c27493]">test2</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="d8c9b7">  <td>23/03/16 14:30:48</td>   <td>-3649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UITest.test1()[pri:1, instance:uiautomation.UITest@67c27493]">test1</td> 
   <td>main@1510467688</td>   <td></td> </tr>
 </table>
